# Cancer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cancer_compiler.cpp  requirements.txt  setup.py
backend_tests/iree/: add-tosa.mlir  exp_tosa.mlir  test_add_tosa.py
cancer/: CMakeLists.txt  __init__.py
cancer-compiler/: CMakeLists.txt
cancer-compiler-module/: cancer-compiler-module.cpp
cancer-compiler-shlib/: CMakeLists.txt
cancer-compiler-src/: CMakeLists.txt
cancer-compiler-src/include/: CMakeLists.txt  CancerInit.h
cancer-compiler-src/lib/: CMakeLists.txt  CancerInit.cpp
cancer-compiler-src/lib/Conversion/: CMakeLists.txt  PassDetail.h  Passes.cpp
cancer-compiler-src/lib/Conversion/AtirToCtir/: AtirToCtir.cpp  CMakeLists.txt
cancer-compiler-src/lib/Conversion/AtirToLinalg/: AtirToLinalg.cpp  CMakeLists.txt
cancer-compiler-src/lib/Conversion/AtirToStd/: AtirToStd.cpp  CMakeLists.txt
cancer-compiler-src/lib/Conversion/AtirToTosa/: AtirToTosa.cpp  CMakeLists.txt
cancer-compiler-src/lib/Conversion/BasicpyToStd/: Passes.cpp  PrimitiveOpsConversion.cpp
cancer-compiler-src/lib/Conversion/NumpyToAtir/: CMakeLists.txt  Passes.cpp
cancer-compiler-src/lib/Conversion/NumpyToTCF/: Passes.cpp
cancer-compiler-src/lib/Conversion/TCFToLinalg/: CMakeLists.txt  TCFToLinalg.cpp
cancer-compiler-src/lib/Conversion/TCFToStd/: TCFToStd.cpp
cancer-compiler-src/lib/Conversion/TCFToTCP/: CMakeLists.txt  TCFToTCP.cpp
cancer-compiler/cancer-compiler-module/: CMakeLists.txt  cancer-compiler-module.cpp
cancer-compiler/cancer-compiler-runmlir/: CMakeLists.txt  cancer-compiler-runmlir.cpp
cancer-compiler/cancer-opt/: CMakeLists.txt  cancer-opt.cpp
cancer-compiler/cancer-translate/: CMakeLists.txt  cancer-translate.cpp
cancer-opt/: CMakeLists.txt  cancer-opt.cpp
cancer-pyrunner/: CMakeLists.txt  cancer-pyrunner.cpp
cancer-runner/: CMakeLists.txt  cancer-runner.cpp
cancer-runner-backend/: CMakeLists.txt  cancer-runner-backend.cpp
cancer-shared-lib/: CMakeLists.txt
cancer-translate/: cancer-translate.cpp
cancer/CompilerBackend/: CMakeLists.txt  cancer_compiler.cpp
cancer/utils/: __init__.py  class_utils.py  file_util.py  import_util.py  json_parser.py  json_parser_test.py  logging_util.py
cancer_frontend/numpy/: numpy_jit_runner.py
cancer_frontend/numpy_jit_runner/: __init__.py  numpy_jit_runner.py
cancer_frontend/pass_manager/: __init__.py  pass_manager_base.py  pass_registry.py  past_to_mlir_pass_manager.py  plugin_multiply_pass.py
cancer_frontend/python/: __init__.py  python_jit_runner.py
cmake_modules/: AddCancer.cmake  CancerPython.cmake  EnvFuncs.cmake
docs/: README.md  requirements.txt
docs/source/: cancer_frontend.scaffold.utils.rst  conf.py  md2rst.py
frontend_examples/: test_binary.py  test_constant.py  test_python.py
frontend_tests/: add.mlir  basic.mlir  bitand.mlir  bitor.mlir  bitxor.mlir  constant-add.mlir  control-flow-basic.mlir  div.mlir  elementwise.mlir  floordiv.mlir  invalid-num-inputs.mlir  list_add0.mlir  list_sub0.mlir  mod.mlir  multiple-ops.mlir  pow.mlir  return_op_use_var.mlir  return_op_with_operand.mlir  return_op_without_operand.mlir  scalar_add0.mlir  scalar_add1.mlir  scalar_add2.mlir  scalar_add_float.mlir  scalar_sub0.mlir  scalar_sub1.mlir  scalar_sub2.mlir  shift.mlir  sub.mlir  test_debug.py
include/: CMakeLists.txt  CancerInit.h  InitLLVM.h
lib/: CMakeLists.txt  CancerInit.cpp  InitAll.cpp
lib/Cancer/: CMakeLists.txt  CancerDialect.cpp  CancerOps.cpp
lib/Capi/: InitLLVM.cpp
lib/Conversion/: CMakeLists.txt  Passes.cpp
lib/Conversion/BasicpyToStd/: CMakeLists.txt  PrimitiveOpsConversion.cpp
lib/Conversion/NumpyToTCF/: CMakeLists.txt  Passes.cpp
lib/Conversion/TCFToLinalg/: CMakeLists.txt  TCFToLinalg.cpp
lib/Conversion/TCFToStd/: CMakeLists.txt  TCFToStd.cpp
lib/Conversion/TCFToTCP/: TCFToTCP.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Basicpy/IR/: BasicpyOps.cpp  CMakeLists.txt
lib/Dialect/Basicpy/Transforms/: CMakeLists.txt  TypeInference.cpp
lib/Dialect/Cancer/: CMakeLists.txt  CancerDialect.cpp  CancerOps.cpp
lib/Dialect/Numpy/IR/: CMakeLists.txt  NumpyDialect.cpp  NumpyOps.cpp
lib/Dialect/Numpy/Transforms/: Passes.cpp  PublicFunctionToTensor.cpp
lib/Dialect/Refback/IR/: RefbackDialect.cpp  RefbackOps.cpp
lib/Dialect/Refbackrt/IR/: RefbackrtDialect.cpp  RefbackrtOps.cpp
lib/Dialect/TCF/IR/: CMakeLists.txt  TCFDialect.cpp
lib/Dialect/TCF/Transforms/: PassDetail.h  ShapeRefinement.cpp
lib/Dialect/TCP/IR/: CMakeLists.txt  TCPDialect.cpp
lib/Dialect/TCP/Transforms/: Bufferize.cpp  CMakeLists.txt  PassDetail.h  Passes.cpp
lib/Pymodule/: CMakeLists.txt  cancer_pymodule.cpp
lib/RefBackend/: CMakeLists.txt  LowerToLLVM.cpp  RefBackend.cpp
lib/RefBackend/JITHelpers/: JITModule.cpp
lib/RefBackend/Runtime/: CMakeLists.txt  CompilerDataStructures.h  Runtime.cpp
lib/Typing/Analysis/CPA/: CMakeLists.txt  Interfaces.cpp  Types.cpp
lib/Typing/Support/: CMakeLists.txt  CPAIrHelpers.cpp
lib/c_api/: CMakeLists.txt  InitLLVM.cpp
lib/capi/: InitLLVM.cpp
new_tests/: basic.mlir  constant-add-scalar.mlir  constant.mlir  pad.mlir  scalar.mlir  test_basic.py  test_broadcast.py  test_constant.py  test_constant_add.py  test_constant_add_scalar.py  test_control_flow_basic.py  test_conv_2d_nchw.py  test_elementwise.py  test_identity.py  test_invalid_broadcast.py  test_invalid_conv_2d_nchw.py  test_invalid_matmul.py  test_invalid_num_inputs.py  test_matmul.py  test_mixed_rank.py  test_mlir.py  test_multi_output.py  test_multiple_ops.py  test_pad.py  test_scalar.py
scripts/: _build_cancer.sh  _build_dependencies.sh  _build_iree.sh  _build_python_package.sh  _install_python_package.sh  build_and_install.sh  build_cancer.sh  build_deps.sh  build_doc.sh  build_python_pkg.sh  change-to-cancer.sh  code_statistics.sh  format_sources.sh  install_python_pkg.sh  make_and_install.sh  test_backend_iree.sh  test_compiler.sh  test_frontend.sh  test_python.sh  uninstall_python_pkg.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
(+318 files in other folders)
